# swing-screener

./: .env.example  .gitignore  README.md  data.py  pyproject.toml  requirements.txt  screener.py  signals.py  trade_plan.py  tv_screener.py  universe.py
